# libtock-rs

./: Cargo.toml  build.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/entry_point/: mod.rs  start_item_emulation.rs
core/src/syscalls/: mod.rs  platform_emulation.rs
emulation/: Cargo.toml
emulation/src/: config.rs  lib.rs  syscall.rs
src/: lib.rs
