[package]
name = "libtock_codegen"
version = "0.1.0"
authors = ["torfmaster <briefe@kebes.de>"]
edition = "2018"

[lib]
proc-macro = true

[features]
emulation = [ "libtock_emulation" ]

[dependencies]
syn = { version = "1.0.6", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
libtock_emulation = { path = "../emulation", optional = true  }
