[package]
name = "libtock_emulation"
version = "0.1.0"
authors = ["jflat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
emulation = ["clap", "zerocopy" ]

[dependencies]
clap = { version = "2.33.0", optional = true }
zerocopy = { version = "0.3.0", optional = true }

